<resources>
    <string name="app_name">Ember</string>
    <string name="news_feed">News Feed</string>
    <string name="ems_alert">EMS Alert</string>
    <string name="triage_call">Triage Call</string>
    <string name="symptoms">Symptoms</string>
    <string name="subscription">Subscription</string>
    <string name="is_victim_unconscious">Is victim unconscious?</string>
    <string name="ems_notified_screen_coming_soon">EMS Notified Screen \n coming soon…</string>
    <string name="cancel_request_message">Are you sure, you want to cancel Alert request?</string>
    <string name="submit_feedback_message">Are you sure, you want to submit the feedback?</string>
    <string name="ems_has_been_notified">EMS has been notified</string>
    <string name="ems_has_been_accepted">EMS has been accepted</string>
    <string name="someone_will_be_contacting_you_immediately">Someone will be contacting\nyou immediately.</string>
    <string name="someone_will_be_arriving_message">Someone will be arriving at\nyour location soon.</string>
    <string name="ember_person_will_connect_with_you_shortly">Ember Medics will connect with you shortly</string>
    <string name="does_the_victim_have_pulse">Does the victim have pulse?</string>
    <string name="ember_person_coming_in">Ember Medics coming in:</string>
    <string name="cpr_tutorial"><u>CPR tutorial</u></string>
    <string name="cpr_tutorial_message">If victim pulse have stopped, please go through our</string>
    <string name="cpr_tutorial_title">CPR Tutorial</string>
    <string name="mins">mins</string>
    <string name="min">min</string>
    <string name="submit">Submit</string>
    <string name="pull_to_refresh">Pull to refresh</string>
    <string name="no_symptoms_available">No symptoms available</string>
    <string name="error_validation_symptom_select">Please select a symptom.</string>
    <string name="triage_waiting_message">Triage Medical Professional\nwill be with you soon.</string>
    <!--Side menus-->
    <string name="account_settings">Account Settings</string>
    <string name="medical_profile">Medical Profile</string>
    <string name="how_it_works">How It Works</string>
    <string name="contact_us">Contact Us</string>
    <string name="triage">Triage</string>
    <string name="call_911">Call 911</string>
    <string name="message_request_completed">Your request was completed.</string>
    <string name="message_request_rejected">Your request was rejected.</string>
    <string name="message_request_cancelled">Your request was cancelled.</string>

    <!--Feedback Screen-->
    <string name="feedback">Feedback</string>
    <string name="feedback_on_triage_call_text">Rate Callee</string>
    <string name="comment">Comment</string>
    <string name="skip"><u>Skip</u></string>

    <string name="please_wait">Please wait</string>
    <string name="triage_will_submit_the_report_shortly">Triage will submit the report shortly</string>
    <string name="triage_feedback_waiting_message">Screen will disappear ones the triage submit the report.</string>
    <string name="triage_call_is_in_progress_waiting_msg">Your triage service call is in progress from another device. Please wait until your call is completed.</string>
    <string name="our_medical_professional_has_recommended">Our Medical Professional\nhas recommended</string>
    <string name="go_to_er">Go to ER</string>
    <string name="go_to_urgent_care">Go to Urgent Care</string>
    <string name="go_to_pcp">Go to PCP</string>
    <string name="book_uber">Book Uber</string>
    <string name="book_pcp">Book PCP</string>
    <string name="reason">Reason</string>
    <string name="see_more"><u>SEE MORE</u></string>
    <string name="see_less"><u>SEE LESS</u></string>
    <string name="look_for_urgent_cares_around_you"><u>Look for Urgent Cares around you</u></string>
    <string name="urgent_cares_around_you_text">Urgent Cares around you</string>


    <!--for how it works screen-->
    <string name="info_cardiac_call">How to make cardiac call?</string>
    <string name="info_triage_call">How to make triage call?</string>
    <string name="info_concierge_call">How to make concierge call?</string>
    <string name="info_change_subscription_plan">How to change subscription plan?</string>
    <string name="info_add_subscription_plan">How to subscribe?</string>


    <!--incident report details-->
    <string name="reason_colon">Reason:</string>
    <string name="is_victim_life_saved">Is victim life saved?</string>
    <string name="caller_visit">Caller Visit:</string>

    <string name="title_colon">Title:</string>
    <string name="comment_colon">Comment:</string>
    <string name="rate_callee_colon">Rate Callee:</string>
    <string name="amount">Amount:</string>
    <string name="call_duration">Call Duration:</string>
    <string name="completed_on">Completed On:</string>
    <string name="pending">Pending</string>

    <string name="high">High</string>
    <string name="patient_disease">Patient Disease:</string>
    <string name="incident_report">Incident Report</string>
    <string name="incident_report_colon">Incident Report:</string>
    <string name="title">Title</string>

    <string name="cardiac_call">Cardiac Call</string>
    <string name="immediate">Immediate</string>
    <string name="away">&#160;away</string>
    <string name="incident_reports">Incident Reports</string>
    <string name="no_incident_reports_available">No incident reports available</string>
    <string name="callee_rating">Callee Rating:</string>
    <string name="patient_symptoms">Patient Symptom:</string>

    <string name="tutorial_title_dashboard">Action 1</string>
    <string name="tutorial_description_dashboard">Tap here to create an alert.</string>
    <string name="tutorial_title_ems_yes_btn">Action 2</string>
    <string name="tutorial_description_ems_yes_btn">Tap here to create a cardiac call alert.</string>
    <string name="tutorial_title_ems_no_btn">Action 2</string>
    <string name="tutorial_description_ems_no_btn">Tap here to create a triage call alert.</string>
    <string name="tutorial_title_symptoms_list">Action 3</string>
    <string name="tutorial_description_symptoms_list">Tap here to choose a symptom.</string>
    <string name="tutorial_title_symptoms_submit_btn">Action 4</string>
    <string name="tutorial_description_symptoms_submit_btn">Tap here to create a triage call alert.</string>
    <string name="my_profile">My Profile</string>
    <string name="saved_cards">Saved Cards</string>
    <string name="txt_hint_search_diseases">Search Diseases</string>
    <string name="txt_buy_now">Buy Now</string>
    <string name="dollar_symbol">$</string>
    <string name="no_plans_available">No plans available.</string>
    <string name="no_medical_profile_available">No disease available.</string>

</resources>
