<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/ll_caller_visit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_bg_color"
        android:orientation="vertical"
        android:paddingEnd="@dimen/_16dp"
        android:paddingStart="@dimen/_16dp"
        android:paddingTop="@dimen/_16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:fontFamily="sans-serif-medium"
                android:text="@string/caller_visit"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_18dp" />

            <TextView
                android:id="@+id/tv_provider_reason"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:fontFamily="sans-serif"
                android:text="@string/go_to_er"
                android:textColor="@color/text_color"
                android:textSize="@dimen/_18dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:fontFamily="sans-serif-medium"
                android:text="@string/reason_colon"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_18dp" />

            <TextView
                android:id="@+id/tv_reason"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:fontFamily="sans-serif"
                android:maxLines="4"
                android:textColor="@color/text_color"
                android:textSize="@dimen/_18dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:gravity="center_vertical"
                android:minHeight="@dimen/_14dp">

                <ImageView
                    android:id="@+id/iv_three_dots"
                    android:layout_width="@dimen/_14dp"
                    android:layout_height="@dimen/_14dp"
                    android:layout_centerVertical="true"
                    android:background="@drawable/ic_three_dots"
                    android:contentDescription="@null" />

                <TextView
                    android:id="@+id/tv_see_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="end"
                    android:layout_marginEnd="@dimen/_n_16dp"
                    android:background="@drawable/ripple_default_bg"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:paddingBottom="@dimen/_8dp"
                    android:paddingEnd="@dimen/_16dp"
                    android:paddingStart="@dimen/_16dp"
                    android:paddingTop="@dimen/_8dp"
                    android:text="@string/see_more"
                    android:textColor="@color/blue_link_color"
                    android:textSize="@dimen/_14dp"
                    tools:ignore="RelativeOverlap" />

                <TextView
                    android:id="@+id/tv_see_less"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="end"
                    android:layout_marginEnd="@dimen/_n_16dp"
                    android:background="@drawable/ripple_default_bg"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:paddingBottom="@dimen/_8dp"
                    android:paddingEnd="@dimen/_16dp"
                    android:paddingStart="@dimen/_16dp"
                    android:paddingTop="@dimen/_8dp"
                    android:text="@string/see_less"
                    android:textColor="@color/blue_link_color"
                    android:textSize="@dimen/_14dp"
                    android:visibility="gone" />

            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</layout>