<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="SpUsage,UnusedAttribute,NestedWeights,RelativeOverlap">

            <!--blue header layout-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blue_bg_color"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:paddingTop="@dimen/_16dp"
                    android:text="@string/our_medical_professional_has_recommended"
                    android:textColor="@color/secondary_text_color"
                    android:textSize="@dimen/_18dp" />

                <TextView
                    android:id="@+id/tv_provider_reason"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:paddingBottom="@dimen/_10dp"
                    android:paddingTop="@dimen/_8dp"
                    android:text="@string/go_to_er"
                    android:textColor="@color/btn_red_color"
                    android:textSize="@dimen/_30dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:paddingBottom="@dimen/_7dp"
                    android:paddingEnd="@dimen/_16dp"
                    android:paddingStart="@dimen/_16dp"
                    android:text="@string/reason"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_18dp" />

                <TextView
                    android:id="@+id/tv_reason"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_16dp"
                    android:layout_marginStart="@dimen/_16dp"
                    android:fontFamily="sans-serif"
                    android:maxLines="5"
                    android:text="awdw iwuahduiwha dihi udhaidhiuwhdiuhwihwiuahdiwhdiu hwidh i wahd ihiwdhiwhd iuwhd iuhwiu hadiuhw iudhwiu hiuw hdiuhd iuwhdi uhdiu hiu dhiuwhd iuwhd iuahd uihw iuh iuahwiud haihdiuwahd iuhwd iuhwid hiuwahd iwh diuhwiaud hwidh ihwd uiwhd iwhdui hwd ahih diuwhduihwd iuhd iuh iuwhdui hiu dhuwi dhuiw dhiu dhiuhw diuhd iuh diuwh diuwhd"
                    android:textColor="@color/reason_txt_color"
                    android:textSize="@dimen/_15dp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_10dp"
                    android:layout_marginEnd="@dimen/_16dp"
                    android:layout_marginStart="@dimen/_16dp"
                    android:gravity="center_vertical">

                    <ImageView
                        android:id="@+id/iv_three_dots"
                        android:layout_width="@dimen/_14dp"
                        android:layout_height="@dimen/_14dp"
                        android:layout_centerVertical="true"
                        android:background="@drawable/ic_three_dots"
                        android:contentDescription="@null" />

                    <TextView
                        android:id="@+id/tv_see_more"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_gravity="end"
                        android:layout_marginEnd="@dimen/_n_16dp"
                        android:background="@drawable/ripple_default_bg"
                        android:fontFamily="sans-serif-medium"
                        android:gravity="center"
                        android:paddingBottom="@dimen/_8dp"
                        android:paddingEnd="@dimen/_16dp"
                        android:paddingStart="@dimen/_16dp"
                        android:paddingTop="@dimen/_8dp"
                        android:text="@string/see_more"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/_14dp" />

                    <TextView
                        android:id="@+id/tv_see_less"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_gravity="end"
                        android:layout_marginEnd="@dimen/_n_16dp"
                        android:background="@drawable/ripple_default_bg"
                        android:fontFamily="sans-serif-medium"
                        android:gravity="center"
                        android:paddingBottom="@dimen/_8dp"
                        android:paddingEnd="@dimen/_16dp"
                        android:paddingStart="@dimen/_16dp"
                        android:paddingTop="@dimen/_8dp"
                        android:text="@string/see_less"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/_14dp"
                        android:visibility="gone" />

                </RelativeLayout>

            </LinearLayout>

            <!--Book Uber layout-->
            <LinearLayout
                android:id="@+id/ll_book_uber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_140dp"
                    android:layout_marginBottom="@dimen/_8dp"
                    android:layout_marginTop="@dimen/_8dp"
                    android:contentDescription="@null"
                    android:scaleType="fitCenter"
                    android:src="@drawable/uber" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:paddingBottom="@dimen/_16dp"
                    android:weightSum="1080">

                    <Button
                        android:id="@+id/btn_book_uber"
                        style="@style/BtnStyle"
                        android:layout_width="0dp"
                        android:layout_margin="0dp"
                        android:layout_weight="550"
                        android:background="@drawable/ripple_default_button"
                        android:text="@string/book_uber" />

                </LinearLayout>
            </LinearLayout>

            <!--Urgent Cares layout-->
            <LinearLayout
                android:id="@+id/ll_urgent_cares"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:visibility="gone">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_60dp"
                    android:layout_marginBottom="@dimen/_16dp"
                    android:layout_marginTop="@dimen/_55dp"
                    android:contentDescription="@null"
                    android:scaleType="fitCenter"
                    android:src="@drawable/map_logo" />

                <TextView
                    android:id="@+id/tv_urgent_cares"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ripple_default_bg"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:text="@string/look_for_urgent_cares_around_you"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_16dp" />

            </LinearLayout>

            <!--Book PCP layout-->
            <LinearLayout
                android:id="@+id/ll_book_pcp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_85dp"
                android:gravity="center_horizontal"
                android:paddingBottom="@dimen/_16dp"
                android:visibility="gone"
                android:weightSum="1080">

                <Button
                    android:id="@+id/btn_book_pcp"
                    style="@style/BtnStyle"
                    android:layout_width="0dp"
                    android:layout_margin="0dp"
                    android:layout_weight="550"
                    android:background="@drawable/ripple_default_button"
                    android:text="@string/book_pcp" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</layout>