<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:clipChildren="false"
            android:clipToPadding="false">

            <android.support.v4.widget.SwipeRefreshLayout
                android:id="@+id/swipeContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.biz4solutions.customs.LoadMoreListView
                    android:id="@+id/load_more_list_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:divider="@null"
                    android:dividerHeight="0dp"
                    tools:listitem="@layout/symptoms_list_item" />

            </android.support.v4.widget.SwipeRefreshLayout>

        </FrameLayout>

        <android.support.v7.widget.CardView
            android:id="@+id/view_submit"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:visibility="gone"
            app:cardBackgroundColor="@color/alert_bg_color"
            app:cardCornerRadius="0dp"
            app:cardElevation="8dp"
            app:cardPreventCornerOverlap="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:weightSum="1080">

                <Button
                    android:id="@+id/btn_submit"
                    style="@style/BtnStyle"
                    android:layout_width="0dp"
                    android:layout_margin="0dp"
                    android:layout_weight="500"
                    android:text="@string/submit" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <RelativeLayout
            android:id="@+id/empty_alert_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            tools:ignore="SpUsage">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/pull_to_refresh"
                android:textColor="@color/no_symptoms_text_color"
                android:textSize="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/no_symptoms_available"
                android:textColor="@color/no_symptoms_text_color"
                android:textSize="20dp" />
        </RelativeLayout>

    </LinearLayout>

</layout>